salesforce/objects/Harvest__c.object
<CustomObject>
    <description>A fruit harvest</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Harvests</relationshipLabel>
        <relationshipName>Harvests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Timing of availability</description>
        <label>Time Available</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date Available</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fruit_Type__c</fullName>
        <label>Fruit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plums</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Notify_Donation_Sites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Donation Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pounds__c</fullName>
        <label>Pounds</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Harvest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pounds__c</columns>
        <columns>Fruit_Type__c</columns>
        <columns>Notify_Donation_Sites__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H-{0}</displayFormat>
        <label>Harvest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>